<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        app:showAsAction="ifRoom"
        android:title="@string/action_select_all"/>
    <item
        android:id="@+id/action_select_none"
        android:icon="@drawable/ic_action_select_none"
        app:showAsAction="ifRoom"
        android:title="@string/action_select_none"/>
    <item
        android:id="@+id/action_select_profile_wifi"
        android:icon="@drawable/ic_action_profile_wifi"
        app:showAsAction="never"
        android:title="@string/action_select_profile_wifi"/>
    <item
        android:id="@+id/action_select_profile_mobile_gsm"
        android:icon="@drawable/ic_action_profile_mobile"
        app:showAsAction="never"
        android:title="@string/action_select_profile_mobile_gsm"/>
    <item
        android:id="@+id/action_select_profile_mobile_cdma"
        android:icon="@drawable/ic_action_profile_mobile"
        app:showAsAction="never"
        android:title="@string/action_select_profile_mobile_cdma"/>
    <item
        android:id="@+id/action_select_profile_location"
        android:icon="@drawable/ic_action_profile_location"
        app:showAsAction="never"
        android:title="@string/action_select_profile_location"/>

</menu>