<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="all"
            android:text="@string/about_copyright_1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/netmon_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="all"
            android:text="@string/about_copyright_2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/netmon_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="all"
            android:drawableLeft="@drawable/ic_about_source_code"
            android:drawablePadding="8dp"
            android:text="@string/about_projectUrl"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/netmon_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="all"
            android:drawableLeft="@drawable/ic_about_bug"
            android:drawablePadding="8dp"
            android:text="@string/about_issues"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/netmon_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="all"
            android:drawableLeft="@drawable/ic_about_rate"
            android:drawablePadding="8dp"
            android:text="@string/about_rate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/netmon_color" />

        <TextView
            android:autoLink="all"
            android:clickable="true"
            android:id="@+id/about_libraries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onLibrariesClicked"
            android:text="@string/about_libraries"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/netmon_color" />
    </LinearLayout>

</ScrollView>